--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <div>
+        <button>Quero me inscrever</button>
+      </div>  
     </div>
   </header>
   <main>
